src2/cc-hipified/log_run_bench.err
main.cu:170:9: error: use of undeclared identifier '__shfl_sync'
  170 |   idx = __shfl_sync(0xffffffff, idx, 0);
      |         ^
main.cu:199:11: error: use of undeclared identifier '__shfl_sync'
  199 |     idx = __shfl_sync(0xffffffff, idx, 0);
      |           ^
main.cu:373:3: error: no matching function for call to 'hipHostAlloc'
  373 |   hipHostAlloc(&nodestatus, g.nodes * sizeof(int), hipHostMallocDefault);
      |   ^~~~~~~~~~~~
/opt/rocm-6.2.0/include/hip/hip_runtime_api.h:3780:12: note: candidate function not viable: no known conversion from 'int **' to 'void **' for 1st argument
 3780 | hipError_t hipHostAlloc(void** ptr, size_t size, unsigned int flags);
      |            ^            ~~~~~~~~~~
3 errors generated when compiling for gfx90a.
failed to execute:/opt/rocm-6.2.0/lib/llvm/bin/clang++  --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a  -std=c++14 -Wall -I../mis-cuda -O3 -c -x hip main.cu -o "main.o"
make: *** [Makefile.AMD:52: main.o] Error 1
